# cpptut

./: CMakelists.txt  README.md
ceres/: CMakeLists.txt  helloworld.cc  helloworld_anlytic.cc  powell.cc
googletest-example-master/: readme.md
googletest-example-master/clever_name/: .gitignore  CMakeLists.txt
googletest-example-master/clever_name/src/: CMakeLists.txt  tools_main.cpp
googletest-example-master/clever_name/src/clever_name/: CMakeLists.txt  randomization.cpp  randomization.h  writer.cpp  writer.h
googletest-example-master/clever_name/tests/: CMakeLists.txt  test_random.cpp  test_writer.cpp
homework1/: hm1.sh  hw1.cpp
homework2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  mat.cpp  mat.h
lec3/: CMakeLists.txt  CMakelists.txt
lec3/buildgtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lec3/src/: CMakeLists.txt  blar.cpp  hello.cpp  hello.h  test.cpp
lec3/tests/: CMakeLists.txt  test_blar.cpp
notes/: idea.md  kantv.md  oldnotes.MD  quicknote.md  review.MD  thesis.md
old_cpp/: 00bookSale.cpp  01triangle.cpp  02printcalender.cpp  03Hanoi.cpp  04findfactor.cpp  05main.cpp  05random.cpp  05random.h  06joker.cpp  06search.cpp  06sort.cpp  07pointer.cpp  08ABlist.cpp  08ABlist.h  08ABmain.cpp  08dyarray.cpp  08dyarray.h  08dyarraymain.cpp  08list.cpp  08list.h  08listmain.cpp  08point.cpp  08point.h  08pointmain.cpp  09ArrayClass.cpp  09ArrayClass.h  09ArrayClassMain.cpp  09llist.cpp  09llist.h  09llistmain.cpp  a.out  dymain.h  test.cpp
